added secret level. Added Teleporters

--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -19,6 +19,12 @@
     <None Update="Levels\Level2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Levels\LevelSecret.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Levels\Level3.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Levels\Level1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
